# KafkaPythonExamples

./: README.md
confluent_kafka/: pyproject.toml  test.py  test_with_avro_WIP.py
confluent_kafka/avro/: topic_avro_schema.json
confluent_rest_proxy/: pyproject.toml  rest_proxy_producer.py  rest_proxy_utils.py
kafka_python/: pyproject.toml  test.py
