[tool.poetry]
name = "confluent_kafka_example"
version = "0.1.0"
description = ""
authors = ["street sharks <street-sharks@fundingcircle.com>"]

[tool.poetry.dependencies]
python = "^3.8"
confluent-kafka = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
