[tool.poetry]
name = "confluent_rest_proxy"
version = "0.1.0"
description = ""
authors = ["Massimo Polimeni <massimo.polimeni@fundingcircle.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
